
  * The `runtests.py` file has been dropped in favor of requiring
    installation of py.test.

  * S3QL now uses semantic versioning. This means that
    backwards-incompatible versions (i.e., versions that require an
    upgrade of the file system revision) will be reflected in an
    increase of the major version number, i.e. the next
    backwards-incompatible version will have version 3.0.

2016-03-08, S3QL 2.17.1

  * Fixed a bug in the upgrade procedure that prevented file system
    modifications when successive commands used the local metadata
    cache.

  * Fixed a bug in the upgrade procedure that resulted in corrupted
    file [acm]times when there was no cached metadata available for
    both s3qladm and the first fsck.s3ql/mount.s3ql invocation after
    the upgrade.

2016-03-08, S3QL 2.17

  * The internal file system revision has changed. File systems
    created with S3QL 2.17 or newer are not compatible with prior S3QL
    versions. To update an existing file system to the newest
    revision, use the `s3qladm upgrade` command.

  * Due to a bug in the FUSE kernel module
    (cf. https://github.com/libfuse/libfuse/issues/23) S3QL does not
    (and did not) honor the write restriction bit. This limitation is
    now documented. (It is unknown if the same problem exists when
    running under BSD or OS-X).

  * S3QL now honors the setgid bit on directories (as opposed to just
    storing them).

  * The `s3qlstat` command now accepts a --raw option to inhibit
    pretty-printing of sizes.

  * The `s3qlctrl log` command is now working again.

  * The `s3qlctrl cachesize` command is now working again.

  * The s3 backend now supports the "infrequent access" storage class
    (cf. https://aws.amazon.com/s3/storage-classes/)

  * The 's3qlstat' command now prints more information about cache
    usage, including the number of cache entries and pending object
    removals.

2016-02-23, S3QL 2.16
